force-app/main/default/objects/zkmulti__MCQueued_Shipment__c/zkmulti__MCQueued_Shipment__c.object-meta.xml
<CustomObject>
    <label>Return</label>
    <nameField>
        <displayFormat>Return-{00000000}</displayFormat>
        <label>Return Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Returns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>