force-app/main/default/objects/zkmulti__MCQueued_Shipment__c/fields/zkmulti__External_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__External_Order_ID__c</fullName>
    <label>External Order ID</label>
    <length>150</length>
    <type>Text</type>
</CustomField>