force-app/main/default/objects/zkmulti__MCQueued_Shipment__c/fields/zkmulti__Return_From_Company__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Return_From_Company__c</fullName>
    <label>Return From Company</label>
    <length>50</length>
    <type>Text</type>
</CustomField>