force-app/main/default/objects/zkmulti__MCQueued_Shipment__c/fields/zkmulti__Return_Shipping_Option__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Return_Shipping_Option__c</fullName>
    <label>Return Shipping Option</label>
    <length>200</length>
    <type>Text</type>
</CustomField>