force-app/main/default/objects/zkmulti__MCQueued_Shipment__c/fields/zkmulti__Return_To_Email__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Return_To_Email__c</fullName>
    <label>Return To Email</label>
    <type>Email</type>
</CustomField>