force-app/main/default/objects/zkmulti__MCQueued_Shipment__c/fields/zkmulti__Return_To_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Return_To_Postal_Code__c</fullName>
    <label>Return To Postal Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>