force-app/main/default/objects/zkmulti__MCQueued_Shipment__c/fields/zkmulti__Return_To_Street_2__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Return_To_Street_2__c</fullName>
    <label>Return To Street 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>