force-app/main/default/objects/zkmulti__MCQueued_Shipment__c/listViews/zkmulti__All.listView-meta.xml
<ListView>
    <fullName>zkmulti__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>